--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@opentelemetry/auto-instrumentations-node": "^0.28.0",
+    "@opentelemetry/sdk-node": "^0.28.0",
     "aws-sdk": "^2.1141.0",
     "eslint": "^8.16.0"
   }
