--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.6.7",
     "@opentelemetry/auto-instrumentations-node": "^0.28.0",
+    "@opentelemetry/instrumentation-aws-sdk": "^0.6.0",
     "@opentelemetry/sdk-node": "^0.28.0",
     "aws-sdk": "^2.1141.0",
     "eslint": "^8.16.0"
